# CppExtensionLib

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CONVENTIONS.md  README.md  TODO.md
CMake/: AddGoogleTest.cmake  toolchain-general.cmake
include/: ExtConsole.hpp  ExtInteger.hpp  ExtString.hpp  Util.hpp  pch.h
include/System/: Console.hpp  Integer.hpp  String.hpp
include/System/Security/: Crypto.hpp
src/: CMakeLists.txt  ExtConsole.cpp  ExtString.cpp  String.cpp
src/System/: Console.cpp  String.cpp
src/System/Security/: Crypto.cpp
test/: CMakeLists.txt  Test_Console.cpp  Test_Crypto_Caesar.cpp  Test_ExtConsole.cpp  Test_ExtInteger.cpp  Test_ExtInteger_GNU.cpp  Test_ExtInteger_MSVC.cpp  Test_ExtString.cpp  Test_Integer.cpp  Test_Integer_GNU.cpp  Test_Integer_MSVC.cpp  Test_Integer_ToHex.cpp  Test_Integer_ToString.cpp  Test_String.cpp
